# kais

./: .gitignore  README.md  advisor.py  app.py  knowledge_graph.py  pyproject.toml  requirements.txt  schema.py  server.py
.streamlit/: config.toml
data/: atlas_case_studies.json  atlas_data.json  atlas_ko.json  atlas_mitigations.json  atlas_nis_mapping.json  atlas_tactics.json  atlas_techniques.json  build_type_focuses.json  cross_mapping.json  incidents.json  measures.json  nist_ai_rmf.json  owasp_llm.json  owasp_nis_mapping.json  threat_measure_links.json  threats.json
data/images/: index.json
